[package]
name = "bevy_flicker"
version = "0.10.0"
edition = "2021"
license = "Unlicense"
keywords = ["gamedev", "graphics", "bevy", "bevy_plugin"]
categories = ["game-development"]
authors = ["bilowik"]
description = "An easy to use event-based system to apply brief overlays to sprites and meshes"
repository = "https://github.com/bilowik/bevy_flicker"

[dependencies]
bevy_sprite = "0.18.0"
bevy_sprite_render = "0.18.0"
bevy_shader = "0.18.0"
bevy_pbr = "0.18.0"
bevy_ecs = "0.18.0"
bevy_math = "0.18.0"
bevy_reflect = "0.18.0"
bevy_time = "0.18.0"
bevy_app = "0.18.0"
bevy_render = "0.18.0"
bevy_asset = "0.18.0"
bevy_log = "0.18.0"
bevy_transform = "0.18.0"
bevy_color = "0.18.0"
bevy_image = "0.18.0"
bevy_mesh = "0.18.0"

[features]
warnings = []


[dev-dependencies]
bevy = "0.18.0"
